<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="MachineCommandStructure" Id="{3a85813a-f79d-4f87-98ba-a9fe5d80b29d}">
    <Declaration><![CDATA[{attribute 'pack_mode':='1'}
TYPE MachineCommandStructure :
STRUCT
	command: MachineControlCommand;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>