<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="MachineControlCommand" Id="{a056fb05-5098-4734-a2a3-b936117dfa5d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE MachineControlCommand :
(
DO_NOTHING := 0,
START := 1, (* Start machine *)
STOP := 2, (* Stop machine *)
RESET := 3 (* Clear machine error status *)
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>